# X4Converter

./: .gitignore  CMakeLists.txt  LICENSE.md  blendertool.py  build.sh  package.sh  readme.md  setup.sh
X4Converter/: CMakeLists.txt
X4Converter/src/: main.cpp
X4ConverterApp/: CMakeLists.txt
X4ConverterApp/src/: main.cpp
X4ConverterBlenderAddon/: __init__.py  common.py  exporter.py  importer.py  panel.py
X4ConverterLib/: CMakeLists.txt
X4ConverterLib/include/: Color.h  Component.h  ComponentPartLod.h  StdInc.h  Vec2D.h  Vec3D.h  Vec4D.h  dll.h
X4ConverterLib/include/Util/: BinaryReader.h
X4ConverterLib/include/Xac/: ActorMesh.h  ActorSubMesh.h  XacChunkHeader.h  XacMaterialDefinitionChunkv2Header.h  XacMaterialDefinitionChunkv2Layer.h  XacMeshChunkv1Header.h  XacMeshChunkv1SubMesh.h  XacMeshChunkv1VertexElement.h  XacMorphTargetsChunkv1Transformation.h  XacSkinningChunkv3Influence.h  XacSkinningChunkv3InfluenceRange.h
X4ConverterLib/include/Xmf/: XmfDataBuffer.h  XmfDataBufferDesc.h  XmfExporter.h  XmfHeader.h  XmfImporter.h  XmfVertexElement.h
X4ConverterLib/src/: CMakeLists.txt  Color.cpp  Color8.cpp  Component.cpp  ComponentPart.cpp  ComponentPartLod.cpp  Material.cpp  MaterialCollection.cpp  MaterialLibrary.cpp  Matrix44.cpp  Quaternion.cpp  Vec2D.cpp  Vec3D.cpp  Vec4D.cpp  dll.cpp
X4ConverterLib/src/Util/: AssimpUtil.cpp  BinaryReader.cpp  BinaryWriter.cpp  DXUtil.cpp  PathUtil.cpp
X4ConverterLib/src/Xac/: ActorFile.cpp  ActorMaterial.cpp  ActorMaterialLayer.cpp  ActorMorphTarget.cpp  ActorNode.cpp  ActorSubMesh.cpp  BoneInfluence.cpp  CMakeLists.txt  XacChunkHeader.cpp  XacDeformVec3D16.cpp  XacDeformVec3D8.cpp  XacExporter.cpp  XacImporter.cpp  XacSkinningChunkv3Influence.cpp  XacSkinningChunkv3InfluenceRange.cpp
X4ConverterLib/src/Xmf/: CMakeLists.txt  XmfDataBuffer.cpp  XmfExporter.cpp  XmfImporter.cpp  XmfMaterial.cpp  XmfVertexElement.cpp  XuMeshFile.cpp
X4ConverterTools/: CMakeLists.txt
X4ConverterTools/include/X4ConverterTools/: API.h  AssetExporter.h  AssetImporter.h  Color.h  Color8.h  Component.h  ComponentPart.h  ComponentPartLod.h  Conversion.h  ConversionContext.h  DirectX.h  Lod.h  Material.h  MaterialCollection.h  MaterialLibrary.h  Matrix44.h  Part.h  Quaternion.h  StdInc.h  Types.h  Vec2D.h  Vec4D.h  types.h
X4ConverterTools/include/X4ConverterTools/Ani/: AniAnimDesc.h  AniFile.h  AniHeader.h  AniItemDesc.h  AniKeyFrameDesc.h  AniKeyframe.h
X4ConverterTools/include/X4ConverterTools/Util/: AssimpUtil.h  BinaryReader.h  BinaryWriter.h  DXUtil.h  PathUtil.h
X4ConverterTools/include/X4ConverterTools/Xmf/: XmfDataBuffer.h  XmfDataBufferDesc.h  XmfExporter.h  XmfHeader.h  XmfImporter.h  XmfMaterial.h  XmfVertexElement.h  XuMeshFile.h
X4ConverterTools/include/X4ConverterTools/ani/: AniAnimDesc.h  AnimDesc.h  AnimFile.h  Axis.h  Header.h  Keyframe.h
X4ConverterTools/include/X4ConverterTools/model/: AbstractElement.h  Collision.h  CollisionLod.h  Component.h  Connection.h  Layer.h  Light.h  Lod.h  Material.h  MaterialCollection.h  MaterialLibrary.h  NodeMap.h  Offset.h  Part.h  VisualLod.h
X4ConverterTools/include/X4ConverterTools/types/: Color8.h  ConversionContext.h  DirectX.h  Matrix44.h  Quaternion.h  Vec3D.h  Vec4D.h
X4ConverterTools/include/X4ConverterTools/util/: AssimpUtil.h  DXUtil.h  FileSystemUtil.h  FormatUtil.h  MetadataStore.h  NodeMap.h  PathUtil.h  XmlUtil.h
X4ConverterTools/include/X4ConverterTools/xmf/: IXmf.h  XmfDataBuffer.h  XmfDataBufferDesc.h  XmfExporter.h  XmfFile.h  XmfHeader.h  XmfImporter.h  XmfMaterial.h  XmfVertexElement.h  XuMeshFile.h
X4ConverterTools/src/: API.cpp  AssetExporter.cpp  AssetImporter.cpp  CMakeLists.txt  Color.cpp  Color8.cpp  Component.cpp  ComponentPart.cpp  ComponentPartLod.cpp  Conversion.cpp  ConversionContext.cpp  Lod.cpp  Material.cpp  MaterialCollection.cpp  MaterialLibrary.cpp  Matrix44.cpp  Part.cpp  Quaternion.cpp  Vec2D.cpp  Vec3D.cpp  Vec4D.cpp
X4ConverterTools/src/Ani/: AniAnimDesc.cpp  AniFile.cpp  AniHeader.cpp  AniItemDesc.cpp  AniKeyFrameDesc.cpp  AniKeyframe.cpp  CMakeLists.txt
X4ConverterTools/src/Util/: AssimpUtil.cpp  BinaryReader.cpp  BinaryWriter.cpp  CMakeLists.txt  DXUtil.cpp  PathUtil.cpp
X4ConverterTools/src/Xmf/: CMakeLists.txt  XmfDataBuffer.cpp  XmfDataBufferDesc.cpp  XmfExporter.cpp  XmfHeader.cpp  XmfImporter.cpp  XmfMaterial.cpp  XmfVertexElement.cpp  XuMeshFile.cpp
X4ConverterTools/src/ani/: AniAnimDesc.cpp  AniFile.cpp  AniHeader.cpp  AniKeyframe.cpp  AnimDesc.cpp  AnimFile.cpp  CMakeLists.txt  Header.cpp  Keyframe.cpp  description.txt
X4ConverterTools/src/model/: AbstractElement.cpp  Collision.cpp  CollisionLod.cpp  Component.cpp  Connection.cpp  Layer.cpp  Light.cpp  Lod.cpp  Material.cpp  MaterialCollection.cpp  MaterialLibrary.cpp  NodeMap.cpp  Offset.cpp  Part.cpp  VisualLod.cpp
X4ConverterTools/src/types/: CMakeLists.txt  Color.cpp  Color8.cpp  Quaternion.cpp  Vec2D.cpp  Vec3D.cpp  Vec4D.cpp
X4ConverterTools/src/util/: AssimpUtil.cpp  CMakeLists.txt  DXUtil.cpp  FileSystemUtil.cpp  MetadataStore.cpp  NodeMap.cpp  PathUtil.cpp  XmlUtil.cpp
X4ConverterTools/src/xmf/: CMakeLists.txt  XmfDataBuffer.cpp  XmfDataBufferDesc.cpp  XmfExporter.cpp  XmfFile.cpp  XmfHeader.cpp  XmfImporter.cpp  XmfMaterial.cpp  XmfVertexElement.cpp  XuMeshFile.cpp
X4ConverterTools/test/: CMakeLists.txt  binary_info  test.cpp  testAniFile.cpp  testUtil.cpp  testUtil.h  testXuMeshFile.cpp  xmf.h
X4ConverterTools/test/Ani/: testAniFile.cpp
X4ConverterTools/test/Xmf/: testXmfDataBufferDesc.cpp  testXmfHeader.cpp  testXuMeshFile.cpp
X4ConverterTools/test/ani/: testAnimFile.cpp
X4ConverterTools/test/model/: testComponent.cpp  testConnection.cpp  testLight.cpp  testLod.cpp  testPart.cpp
X4ConverterTools/test/xmf/: testXmfDataBufferDesc.cpp  testXmfFile.cpp  testXmfHeader.cpp  testXmfMaterial.cpp  testXuMeshFile.cpp
dead-xac/: EmotionFX.h
dead-xac/include/: EmotionFX.h
dead-xac/src/: BinaryReader.cpp  (+2 more)
test_files/: struct_bt_ut_omicron_superyard.xml  struct_bt_ut_omicron_superyard_data.ani  struct_bt_ut_omicron_superyard_macro.xml
(+35 files in other folders)
