add_subdirectory(ani)
add_subdirectory(types)
add_subdirectory(util)
#add_subdirectory(Xac)
add_subdirectory(xmf)
SET(LIB_SRCS
        ${ANI_SRCS}
        ${UTIL_SRCS}
        ${TYPES_SRCS}
        #${XAC_SRCS}
        ${XMF_SRCS}
        src/API.cpp
        src/Component.cpp
        src/ComponentPart.cpp
        src/ComponentPartLod.cpp
        src/Material.cpp
        src/MaterialCollection.cpp
        src/MaterialLibrary.cpp
        PARENT_SCOPE)
